--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,5 +1,10 @@
+p {
+  color: gray;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 .content-wrapper {
-  padding: 30px 10px 30px 95px;
+  padding: 0px 25px 30px 95px;
   overflow: auto;
   height: calc(100vh - 60px);
 }
@@ -27,9 +32,54 @@
   color: gray;
   letter-spacing: 0.5px;
   font-size: x-large;
-  font-weight: 600;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 ::-webkit-scrollbar {
   width: 2px;
   background: rgb(205, 198, 235);
+}
+.df-normal-icon {
+  background: rgb(237, 237, 237);
+  border-bottom: 1px solid #b1a8a8;
+  height: 65px;
+}
+.df-normal-icon-selected {
+  background: white;
+  border-bottom: 1px solid #b1a8a8;
+  height: 65px;
+}
+.df-title-icon-sidebar {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+}
+.df-side-bar-title {
+  margin: -8px;
+  padding: 0;
+}
+.df-side-bar-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.df-side-bar-main-menu {
+  margin-top: 55px;
+}
+.df-navbar-top-div {
+  height: 55px;
+  background: rgb(237, 237, 237);
+  position: sticky;
+  z-index: 2147483647;
+  border-bottom: 1px solid rgb(203, 203, 203);
+}
+.df-navbar-header-title {
+  width: fit-content;
+  font-size: larger;
+  letter-spacing: 0.5px;
+  font-family: system-ui;
+  margin-left: 15px;
+  height: 55px;
+  padding: 12px 0;
+  color: gray;
 }
