--- a/src/Pages/Table/BuyData/BuyData.module.css
+++ b/src/Pages/Table/BuyData/BuyData.module.css
@@ -29,3 +29,8 @@
   justify-content: space-between;
   margin-bottom: 5px;
 }
+.filter-date-picker{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
