--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@
 :root {
   /* ===== Colors ===== */
   --body-color: #e4e9f7;
-  --sidebar-color: #000;
-  --primary-color: #695cfe;
+  --sidebar-color: white;
+  --primary-color: gray;
   --primary-color-light: #f6f5ff;
   --toggle-color: #ddd;
-  --text-color: #707070;
+  --text-color: black;
 
   /* ====== Transition ====== */
   --tran-03: all 0.2s ease;
