--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -7,45 +7,51 @@ p {
   padding: 10px 15px 0px 95px;
   overflow: auto;
   height: calc(100vh - 65px);
-  background: rgb(214, 212, 209);
-  background: linear-gradient(
-    0deg,
-    rgba(214, 212, 209, 1) 0%,
-    rgba(255, 255, 255, 1) 100%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background-color: rgb(240, 242, 245);
 }
 .df-primary-button {
   height: 40px !important;
-  background: transparent !important;
-  color: gray !important;
-  border: 1px solid gray !important;
+  border: none !important;
   letter-spacing: 0.7px !important;
   border-radius: 4px !important;
   padding: 10px !important;
   margin: 10px 0px !important;
+  color: white !important;
+  background-image: linear-gradient(
+    195deg,
+    rgb(73, 163, 241),
+    rgb(26, 115, 232)
+  ) !important;
+  box-shadow: rgba(26, 115, 232, 0.15) 0rem 0.1875rem 0.1875rem 0rem,
+    rgba(26, 115, 232, 0.2) 0rem 0.1875rem 0.0625rem -0.125rem,
+    rgba(26, 115, 232, 0.15) 0rem 0.0625rem 0.3125rem 0rem !important;
 }
 .df-primary-button:hover {
-  background: gray !important;
+  box-shadow: rgba(26, 115, 232, 0.4) 0rem 0.875rem 1.625rem -0.75rem,
+    rgba(26, 115, 232, 0.15) 0rem 0.25rem 1.4375rem 0rem,
+    rgba(26, 115, 232, 0.2) 0rem 0.5rem 0.625rem !important;
   color: white !important;
   cursor: pointer !important;
 }
 .df-secondary-button {
   height: 40px !important;
-  background: transparent !important;
-  color: rgb(67, 67, 67) !important;
-  border: 1px solid rgb(67, 67, 67) !important;
   letter-spacing: 0.7px !important;
   border-radius: 4px !important;
   padding: 10px !important;
   margin: 10px 0px !important;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  color: rgb(73, 163, 241) !important;
+  background: transparent !important;
+  border: 1px solid rgb(73, 163, 241) !important;
+  box-shadow: rgba(26, 115, 232, 0.15) 0rem 0.1875rem 0.1875rem 0rem,
+    rgba(26, 115, 232, 0.2) 0rem 0.1875rem 0.0625rem -0.125rem,
+    rgba(26, 115, 232, 0.15) 0rem 0.0625rem 0.3125rem 0rem !important;
 }
 .df-secondary-button:hover {
-  background: gray;
-  color: white;
-  cursor: pointer;
+  box-shadow: rgba(26, 115, 232, 0.4) 0rem 0.875rem 1.625rem -0.75rem,
+    rgba(26, 115, 232, 0.15) 0rem 0.25rem 1.4375rem 0rem,
+    rgba(26, 115, 232, 0.2) 0rem 0.5rem 0.625rem !important;
+  cursor: pointer !important;
+  color: rgb(73, 163, 241) !important;
 }
 .content-wrapper-button-div {
   display: flex;
@@ -54,7 +60,7 @@ p {
   margin: 0 0 10px 0;
 }
 .content-wrapper-title {
-  color: gray;
+  color: rgb(52, 71, 103);
   letter-spacing: 0.5px;
   font-size: x-large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -93,7 +99,8 @@ p {
 }
 .df-navbar-top-div {
   height: 55px;
-  background: var(--sidebar-color);
+  /* background: var(--sidebar-color); */
+  background-color: rgb(240, 242, 245);
   position: sticky;
   z-index: 999;
   padding: 0 15px;
@@ -103,7 +110,7 @@ p {
   font-size: larger;
   letter-spacing: 0.5px;
   font-family: system-ui;
-
+  margin-left: 80px;
   color: gray;
 }
 .df-custom-action-cell {
@@ -155,6 +162,8 @@ p {
   overflow: auto;
   box-shadow: 1px 1px 8px 1px rgba(145, 145, 145, 0.3);
   background: white;
+  border: 0px solid rgba(0, 0, 0, 0.125) !important;
+  border-radius: 0.75rem !important;
 }
 .css-11xur9t-MuiPaper-root-MuiTableContainer-root {
   box-shadow: 1px 1px 8px 1px rgba(145, 145, 145, 0.3) !important;
@@ -162,7 +171,7 @@ p {
 .history-table {
   background: linear-gradient(
     0deg,
-    rgba(214, 212, 209, 1) 0%,
+    rgb(240, 242, 245, 1) 0%,
     rgba(255, 255, 255, 1) 100%,
     rgba(255, 255, 255, 1) 100%
   );
